--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "src/assets/blockUi/jquery.blockUI.js",
               "node_modules/chart.js/dist/Chart.min.js",
               "node_modules/select2/dist/js/select2.full.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
