--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,15 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/select2/dist/css/select2.min.css",              
+              "node_modules/select2/dist/css/select2.min.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
+              "node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js",
               "src/assets/blockUi/jquery.blockUI.js",
               "node_modules/chart.js/dist/Chart.min.js",
               "node_modules/select2/dist/js/select2.full.min.js",
