--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/select2/dist/css/select2.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.css"
             ],
             "scripts": [
