--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "datatables.net-dt": "^1.10.19",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^3.2.0",
     "rxjs": "~6.3.3",
     "select2": "^4.0.6-rc.1",
