--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm run serve:ssr",
+    "start": "ng serve --o",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "npm run build:ssr",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
-    "serve:ssr": "node dist/server.js",
-    "build:client-and-server-bundles": "ng build --prod && ng run baiwa-app:server",
-    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +18,6 @@
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/platform-server": "^7.1.0",
     "@angular/router": "~7.1.0",
     "angular-datatables": "^7.0.0",
     "bootstrap": "^4.2.1",
