--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",             
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/select2/dist/css/select2.min.css",
@@ -37,6 +37,7 @@
               "src/assets/blockUi/jquery.blockUI.js",
               "node_modules/chart.js/dist/Chart.min.js",
               "node_modules/select2/dist/js/select2.full.min.js",
+              "node_modules/select2/dist/js/select2.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
